Lots of bug fixes.

--- a/Journal/app/dialogs/edit-person-dialog/edit-person-dialog.html
+++ b/Journal/app/dialogs/edit-person-dialog/edit-person-dialog.html
@@ -1,6 +1,6 @@
 <div class="padding-x-xl padding-y-xl">
 	<form id="form" name="personForm">
-		<art-user-photo-img width="100" height="100" src="t.photoUrl" changed="t.onPhotoChanged"></art-user-photo-img>
+		<art-user-photo-img width="100" height="100" src="t.photoUrl" can-change="true" changed="t.onPhotoChanged"></art-user-photo-img>
 
 		<div class="form-group">
 			<label>Name</label><br>
