--- a/Journal/app/directives/art-chat-input/art-chat-input.html
+++ b/Journal/app/directives/art-chat-input/art-chat-input.html
@@ -17,14 +17,15 @@
         </ul>
     </div>
     <div class="textarea-container">
-        <a class="btn btn-chromeless pull-right" ng-click="t.createMark($event)"><i class="zmdi zmdi-photo-size-select-small"></i></a>
+        <a class="btn btn-chromeless pull-right" ng-click="t.createMark($event)" ng-show="false"><i class="zmdi zmdi-photo-size-select-small"></i></a>
         <a class="btn btn-chromeless pull-right" ng-click="t.toggleEmoticonPanel()"><i class="zmdi zmdi-mood" ng-show="!t.showEmoticonPanel"></i><i class="zmdi zmdi-chevron-down" ng-show="t.showEmoticonPanel"></i></a>
-        <div class="textarea-placeholder" ng-show="t.comment.message.length === 0">Schreibe eine Nachricht</div>
-        <div class="textarea textarea-editable" ng-model="t.input" ng-change="t.postChanged($event)" ng-enter="t.postComment($event, t.comment)" ng-focus="t.onFocused()"
-            ng-esc="t.onEscape()" contenteditable="true">
+        <div class="textarea-placeholder" ng-show="t.showPlaceholder">
+            Schreibe eine Nachricht
+        </div>
+        <div class="textarea textarea-editable" ng-enter="t.postComment($event, t.comment)" ng-focus="t.onFocused()" ng-esc="t.onEscape()" contenteditable>
         </div>
     </div>
     <div class="toolbar" ng-show="t.focused && !t.selectedPanel">
-        <a class="btn btn-chromeless" ng-click="t.postRequest($event, t.comment)"><i class="zmdi zmdi-refresh"></i><span class="btn-label">Feedback anfordern</span></a>
+        <a class="btn btn-chromeless pull-right" ng-click="t.postRequest($event, t.comment)"><i class="zmdi zmdi-refresh"></i><span class="btn-label">Feedback anfordern</span></a>
     </div>
 </div>
