Fixed exception in edit contact dialog. Added beta to window title.

--- a/Journal/index.html
+++ b/Journal/index.html
@@ -196,7 +196,8 @@
 				<button class="btn-title btn-info" id="btn-update"><art-update-indicator></art-update-indicator></button>
 			</div>
 			<div id="window-title-text">
-				<span><img src="app/resources/img/artivity-66x20.png" width="66" height="20" alt="artivity"/></span>
+				<span><img src="app/resources/img/artivity.png" width="64" height="20" alt="artivity"/></span>
+				<span style="background: #f87806; border-radius: 2px; font-size: 10px; color: white; padding: 1px 3px; margin-left: 5px; position: relative; top: -2px;">BETA</span>
 			</div>
 		</div>
 		<div class="window-view-container" id="window-view-container">
