Switched localization from angular-translate to angular-gettext.

--- a/Journal/app/dialogs/close-project-dialog/close-project-dialog.html
+++ b/Journal/app/dialogs/close-project-dialog/close-project-dialog.html
@@ -2,14 +2,14 @@
 	<div class="row">
 		<div class="col-xs-12">
 			<div class="container padding-x-xl padding-y-xl">
-				<h2 class="modal-title">Archive '<span ng-bind="t.project.Title"></span>'?</h2>
+				<h2 class="modal-title" translate>Archive '{{t.project.Title}}'?</h2>
 			</div>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-xs-12">
 			<div class="layout-container padding-x-xl">
-				<p class="description">The project will be marked as archived and no content will be deleted.<br> You can restore the project at any time in the future.</p>
+				<p class="description" translate>The project will be marked as archived and no content will be deleted.<br> You can restore the project at any time in the future.</p>
 			</div>
 		</div>
 	</div>
