--- a/Journal/app/dialogs/update-dialog/update-dialog.html
+++ b/Journal/app/dialogs/update-dialog/update-dialog.html
@@ -1,7 +1,10 @@
 <div class="row">
 	<div class="col-xs-12">
 		<div class="container padding-x-xl padding-y-xl">
-			<h2 class="modal-title"><i class="zmdi zmdi-cast"></i> {{ t.title | translate}}</h2>
+			<h2 class="modal-title">
+				<i class="zmdi zmdi-cast"></i>
+				<span translate>Update</span>
+			</h2>
 		</div>
 	</div>
 </div>
@@ -17,10 +20,10 @@
 				<uib-progressbar value="t.progress.percentComplete" animate="t.progressAnimate" max="100" style="height: 5px"></uib-progressbar>
 				<label class="pull-right">{{t.progress.percentComplete}}%</label>
 				<div ng-if="t.progress.percentComplete < 100">
-					<label>Downloading..</label>
+					<label translate>Downloading..</label>
 				</div>
 				<div ng-if="t.progress.percentComplete === 100">
-					<label>Download complete.</label>
+					<label translate>Download complete.</label>
 				</div>
 			</div>
 		</div>
@@ -28,8 +31,13 @@
 	<div class="row">
 		<div class="col-xs-12">
 			<div class="toolbar pull-right">
-				<button ng-show="t.progress.percentComplete === 100" class="btn btn-success" type="submit" ng-click="t.installUpdate()"><i class="zmdi zmdi-check"></i> <span class="btn-label">Install</span></button>
-				<button class="btn" ng-click="t.cancel()"><i class="zmdi zmdi-close"></i></button>
+				<button ng-show="t.progress.percentComplete === 100" class="btn btn-success" type="submit" ng-click="t.installUpdate()">
+					<i class="zmdi zmdi-check"></i>
+					<span class="btn-label" translate>Install</span>
+				</button>
+				<button class="btn" ng-click="t.cancel()">
+					<i class="zmdi zmdi-close"></i>
+				</button>
 			</div>
 		</div>
 	</div>
@@ -38,8 +46,13 @@
 	<div class="row">
 		<div class="col-xs-12">
 			<div class="toolbar pull-right">
-				<button class="btn btn-success" type="submit" ng-click="t.downloadUpdate()"><i class="zmdi zmdi-download"></i> <span class="btn-label">Download</span></button>
-				<button class="btn" ng-click="t.cancel()"><i class="zmdi zmdi-close"></i></button>
+				<button class="btn btn-success" type="submit" ng-click="t.downloadUpdate()">
+					<i class="zmdi zmdi-download"></i>
+					<span class="btn-label" translate>Download</span>
+				</button>
+				<button class="btn" ng-click="t.cancel()">
+					<i class="zmdi zmdi-close"></i>
+				</button>
 			</div>
 		</div>
 	</div>
