--- a/Journal/app/directives/art-app-list/art-app-list.html
+++ b/Journal/app/directives/art-app-list/art-app-list.html
@@ -6,7 +6,5 @@
             </div>
         </li>
     </ul>
-    <div ng-show="t.apps.length === 0">
-        {{ 'ART_APP_LIST.NO_PLUGINS' | translate}}
-    </div>
+    <div ng-show="t.apps.length === 0" translate>No software plugins are installed.</div>
 </div>
