--- a/Journal/app/directives/art-chat-input/art-chat-input.html
+++ b/Journal/app/directives/art-chat-input/art-chat-input.html
@@ -19,13 +19,15 @@
     <div class="textarea-container">
         <a class="btn btn-chromeless pull-right" ng-click="t.createMark($event)" ng-show="false"><i class="zmdi zmdi-photo-size-select-small"></i></a>
         <a class="btn btn-chromeless pull-right" ng-click="t.toggleEmoticonPanel()"><i class="zmdi zmdi-mood" ng-show="!t.showEmoticonPanel"></i><i class="zmdi zmdi-chevron-down" ng-show="t.showEmoticonPanel"></i></a>
-        <div class="textarea-placeholder" ng-show="t.showPlaceholder">
-            Schreibe eine Nachricht
+        <div class="textarea-placeholder" ng-show="t.showPlaceholder" translate>
+            Write a message
         </div>
         <div class="textarea textarea-editable" ng-enter="t.postComment($event, t.comment)" ng-focus="t.onFocused()" ng-esc="t.onEscape()" contenteditable>
         </div>
     </div>
     <div class="toolbar" ng-show="t.focused && !t.selectedPanel">
-        <a class="btn btn-chromeless pull-right" ng-click="t.postRequest($event, t.comment)"><i class="zmdi zmdi-refresh"></i><span class="btn-label">Feedback anfordern</span></a>
+        <a class="btn btn-chromeless pull-right" ng-click="t.postRequest($event, t.comment)">
+            <i class="zmdi zmdi-refresh"></i><span class="btn-label" translate>Request feedback</span>
+        </a>
     </div>
 </div>
