--- a/Journal/app/directives/art-client-state-info/art-client-state-info.html
+++ b/Journal/app/directives/art-client-state-info/art-client-state-info.html
@@ -5,15 +5,15 @@
             <div class="rect2"></div>
             <div class="rect3"></div>
         </div>
-        <span>Connecting..</span>
+        <span translate>Connecting..</span>
     </div>
     <div ng-switch-when="2">
-        <i class="zmdi zmdi-check zmdi-sm"></i> Authorization successful.
+        <i class="zmdi zmdi-check zmdi-sm"></i> <span translate>Authorization successful.</span>
     </div>
     <div ng-switch-when="3">
-        <i class="zmdi zmdi-alert-triangle zmdi-sm"></i> Wrong username or password.
+        <i class="zmdi zmdi-alert-triangle zmdi-sm"></i> <span translate>Wrong username or password.</span>
     </div>
     <div ng-switch-when="4">
-        <i class="zmdi zmdi-alert-triangle zmdi-sm"></i> Connection error.
+        <i class="zmdi zmdi-alert-triangle zmdi-sm"></i> <span translate>Connection error.</span>
     </div>
 </div>
