--- a/Journal/app/directives/art-document-history-viewer/art-document-history-viewer.html
+++ b/Journal/app/directives/art-document-history-viewer/art-document-history-viewer.html
@@ -1,5 +1,5 @@
 <div class="layout-root">
-    <canvas ng-init="t.initialize()">
+    <canvas ng-init="t.initialize()" translate>
         HTML canvas is not supported by your browser.
     </canvas>
 </div>
