--- a/Journal/app/directives/art-folder-picker/art-folder-picker.html
+++ b/Journal/app/directives/art-folder-picker/art-folder-picker.html
@@ -2,6 +2,6 @@
     <a class="btn btn-chromeless btn-select-folder">
         <i class="zmdi zmdi-folder"></i>
         <span class="btn-label" ng-show="folder" ng-bind="folderPath"></span>
-        <span class="btn-label" ng-show="!folder">Ordner auswählen</span>
+        <span class="btn-label" ng-show="!folder" translate>Select folder</span>
     </a>
 </div>
