--- a/Journal/app/directives/art-settings-accounts/art-settings-accounts.html
+++ b/Journal/app/directives/art-settings-accounts/art-settings-accounts.html
@@ -1,8 +1,11 @@
 <form name="form">
     <div class="form-header">
-        <button class="btn btn-chromeless pull-right" style="position: relative; right -10px; top: -10px;" ng-click="addAccount()"><i class="zmdi zmdi-plus zmdi-lg"></i> <span class="btn-label">Add account</span></button>
+        <button class="btn btn-chromeless pull-right" style="position: relative; right -10px; top: -10px;" ng-click="addAccount()">
+            <i class="zmdi zmdi-plus zmdi-lg"></i>
+            <span class="btn-label" translate>Add account</span>
+        </button>
 
-        <p class="description">{{ 'SETTINGS.ACCOUNTS.DESCRIPTION' | translate }}</p>
+        <p class="description" translate>Connect your online accounts to benefit from additional features:</p>
     </div>
 
     <div class="clearfix"></div>
