--- a/Journal/app/dialogs/add-account-dialog/add-account-dialog.html
+++ b/Journal/app/dialogs/add-account-dialog/add-account-dialog.html
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="col-xs-12">
 		<div class="container padding-x-xl padding-y-xl">
-			<h2 class="modal-title">{{ t.title | translate}}</h2>
+			<h2 class="modal-title">{{t.title | translate}}</h2>
 		</div>
 	</div>
 </div>
@@ -11,9 +11,9 @@
 			<div class="col-xs-12">
 				<div class="layout-container padding-x-xl">
 					<form name="connectForm" ng-submit="t.connectAccount(selectedClient)">
-						<p class="description">Please enter the server address, username and password of the Artivity service:</p>
+						<p class="description"><span translate>Please enter the server address, username and password</span> <span translate>of the Artivity service:</span></p>
 						<input type="text" class="form-control" id="url" name="url" placeholder="https://artivity.online" ng-model="t.parameter.url" required>
-						<label style="margin-top: .5em;">Login</label>
+						<label style="margin-top: .5em;" translate>Login</label>
 						<div class="form-group">
 							<input class="form-control form-control-login" type="text" placeholder="Username" id="username" name="username" size="20" maxlength="20" ng-model="t.parameter.username" required>
 							<input class="form-control form-control-login" type="password" placeholder="Password" id="password" name="password" size="20" maxlength="20" ng-model="t.parameter.password" ng-enter="t.connectAccount(selectedClient)" required>
@@ -37,14 +37,15 @@
 			<div class="col-xs-12">
 				<div class="layout-container padding-x-xl">
 					<form name="connectForm" ng-submit="t.connectAccount(selectedClient)">
-						<p class="description">Please enter the server address, username and password of the repository:</p>
+						<p class="description"><span translate>Please enter the server address, username and password</span> <span translate>of the repository:</span></p>
 						<input type="text" class="form-control" id="url" name="url" placeholder="http://example.org" ng-model="t.parameter.url" required>
-						<label style="margin-top: .5em;">Login</label>
+						<label style="margin-top: .5em;" translate>Login</label>
 						<div class="form-group">
-							<input class="form-control form-control-login" type="text" placeholder="Username" id="username" name="username" size="20"
-											maxlength="20" ng-model="t.parameter.username" required>
-								<input class="form-control form-control-login" type="password" placeholder="Password" id="password" name="password" size="20"
-												maxlength="20" ng-model="t.parameter.password" ui-keypress="{13:'t.connectAccount(selectedClient)'}" required>
+							<input class="form-control form-control-login" type="text" id="username" name="username" size="20" maxlength="20"
+								placeholder="{{Username | translate}}" ng-model="t.parameter.username" required>
+
+							<input class="form-control form-control-login" type="password" id="password" name="password" size="20" maxlength="20"
+								placeholder="{{Password | translate}}" ng-model="t.parameter.password" ui-keypress="{13:'t.connectAccount(selectedClient)'}" required>
 						</div>
 					</form>
 					<div art-client-state-info state="{{t.clientState}}"></div>
@@ -64,7 +65,7 @@
 		<div class="row">
 			<div class="col-xs-12">
 				<div class="container padding-x-xl">
-					<p class="description">Please log into your ORCiD account and allow Artivity to be connected:</p>
+					<p class="description" translate>Please log into your ORCiD account and allow Artivity to be connected:</p>
 				</div>
 				<iframe ng-src="{{t.clientUrl}}" style="background: white; min-height: 400px; width: 100%;"></iframe>
 				<div class="container padding-x-xl">
@@ -84,7 +85,7 @@
 		<div class="row">
 			<div class="col-xs-12">
 				<div class="layout-container padding-x-xl">
-					<p class="description">Please select the account type to connect with:</p>
+					<p class="description" translate>Please select the account type to connect with:</p>
 					<ul class="list-view">
 						<li class="list-item" ng-repeat="client in t.clients">
 							<a ng-click="t.selectClient(client)" style="cursor: pointer;">
