--- a/Journal/app/dialogs/edit-person-dialog/edit-person-dialog.html
+++ b/Journal/app/dialogs/edit-person-dialog/edit-person-dialog.html
@@ -3,12 +3,12 @@
 		<art-user-photo-img width="100" height="100" src="t.photoUrl" can-change="true" changed="t.onPhotoChanged"></art-user-photo-img>
 
 		<div class="form-group">
-			<label>Name</label><br>
+			<label translate>Name</label><br>
 			<input class="form-control" type="text" ng-model="t.person.Name" ng-change="t.findPersons(t.person.Name)">
 		</div>
 		
 		<div class="form-group">
-			<label>E-Mail</label><br>
+			<label translate>E-Mail</label><br>
 			<input class="form-control" type="text" ng-model="t.person.EmailAddress" ng-change="t.findPersons(t.person.EmailAddress)">
 		</div>
 
