--- a/Journal/app/directives/art-document-view/art-document-view.html
+++ b/Journal/app/directives/art-document-view/art-document-view.html
@@ -3,7 +3,7 @@
         <div class="toolbar toolbar-view">
             <a class="btn btn-chromeless" ng-click="t.navigateBack()"><i class="zmdi zmdi-chevron-left"></i></a>
             <div class="txt txt-title">{{t.file.label}}</div>
-            <a class="btn btn-primary pull-right" ng-click="t.publishLatestRevision(t.file)"><i class="zmdi zmdi-share"></i><span class="btn-label">Teilen</span></a>
+            <a class="btn btn-primary pull-right" ng-click="t.publishLatestRevision(t.file)"><i class="zmdi zmdi-share"></i><span class="btn-label" translate>Share</span></a>
         </div>
     </div>
     <div class="row expand">
