--- a/Journal/app/directives/art-document-viewer/art-document-viewer.html
+++ b/Journal/app/directives/art-document-viewer/art-document-viewer.html
@@ -1,6 +1,6 @@
 <div class="layout-root">
-    <canvas class="viewer-canvas">
-        {{'ART_DOCUMENT_VIEWER.CANVAS_WARNING' | translate}}
+    <canvas class="viewer-canvas" translate>
+        HTML canvas is not supported by your browser.
     </canvas>
 
     <art-document-viewer-toolbar style="position: absolute; top: 10px; left: 10px;"></art-document-viewer-toolbar>
