--- a/Journal/app/directives/art-editing-history/art-editing-history.html
+++ b/Journal/app/directives/art-editing-history/art-editing-history.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="session" ng-class="{collapsed: activity.isComment}">
                     <!--<img class="icn" ng-src="{{agent.iconUrl}}" width="24" height="24">-->
-                    <label>{{'FILEVIEW.EDITING_SESSION' | translate}}</label>
+                    <label translate>Edited File</label>
                     <!--<label class="time pull-right small">{{activity.totalTime | amDateFormat:'h[h] m[m]'}}</label>-->
                 </div>
             </div>
