--- a/Journal/app/directives/art-editing-stats/art-editing-stats.html
+++ b/Journal/app/directives/art-editing-stats/art-editing-stats.html
@@ -1,67 +1,67 @@
-<h5>{{'FILEVIEW.EDITING' | translate}}</h5>
+<h5 trabslate>Editing</h5>
 <table style="width: 90%;">
     <tr>
         <td>
-            <label>{{'FILEVIEW.CONFIDENCE' | translate}}</label>
+            <label translate>Confidence</label>
         </td>
         <td><span class="pull-right">{{stats.confidence()}}</span></td>
         <td width="20">&nbsp;%</td>
     </tr>
     <tr>
         <td>
-            <label>{{'FILEVIEW.STEPS' | translate}}</label>
+            <label translate>Steps</label>
         </td>
         <td><span class="pull-right">{{stats.stepCount}}</span></td>
         <td></td>
     </tr>
     <tr>
         <td>
-            <label>{{'FILEVIEW.UNDOS' | translate}}</label>
+            <label translate>Undos</label>
         </td>
         <td><span class="pull-right">{{stats.undoCount}}</span></td>
         <td></td>
     </tr>
     <tr>
         <td>
-            <label>{{'FILEVIEW.REDOS' | translate}}</label>
+            <label translate>Redos</label>
         </td>
         <td><span class="pull-right">{{stats.redoCount}}</span></td>
         <td></td>
     </tr>
 </table>
-<h5 style="margin-top: 1em;">{{'FILEVIEW.COMPOSITION' | translate}}</h5>
+<h5 style="margin-top: 1em;" translate>Composition</h5>
 <table style="width: 90%;">
     <tr>
         <td>
-            <label>{{'FILEVIEW.LAYERS' | translate}}</label>
+            <label translate>Layers</label>
         </td>
         <td><span class="pull-right">{{stats.layers.length}}</span></td>
         <td width="20"></td>
     </tr>
     <tr>
         <td>
-            <label>{{'FILEVIEW.GROUPS' | translate}}</label>
+            <label translate>Groups</label>
         </td>
         <td><span class="pull-right">0</span></td>
         <td></td>
     </tr>
     <tr>
         <td>
-            <label>{{'FILEVIEW.MASKED' | translate}}</label>
+            <label translate>Masked</label>
         </td>
         <td><span class="pull-right">0</span></td>
         <td></td>
     </tr>
     <tr>
         <td>
-            <label>{{'FILEVIEW.CLIPPED' | translate}}</label>
+            <label translate>Clipped</label>
         </td>
         <td><span class="pull-right">0</span></td>
         <td></td>
     </tr>
 </table>
 <div ng-show="false">
-    <h5 style="margin-top: 1em;">{{'FILEVIEW.COLOURS' | translate}}</h5>
+    <h5 style="margin-top: 1em;" translate>Colours</h5>
     <ul class="list-unstyled">
         <li ng-repeat="color in t.palette">
             <div style="width: 30px; height: 30px; margin-right: 5px; margin-bottom: 5px; float: left; background: rgb({{color[0]}},{{color[1]}},{{color[2]}});"></div>
