--- a/Journal/app/directives/art-layer-control/art-layer-control.html
+++ b/Journal/app/directives/art-layer-control/art-layer-control.html
@@ -1,4 +1,4 @@
-<h5 style="margin-top: 1em;">{{'FILEVIEW.LAYERS' | translate}}</h5>
+<h5 style="margin-top: 1em;" translate>Layers</h5>
 <ul class="list-unstyled">
     <li ng-repeat="layer in layers | reverse" ng-class="{translucent: !layer.visible}">
         <a class="btn btn-chromeless padding-sm" ng-click="t.toggleVisibility(layer)"><i class="zmdi zmdi-eye icn icn-transparent"></i></a><label>{{layer.label}}</label>
