--- a/Journal/app/directives/art-search-input/art-search-input.html
+++ b/Journal/app/directives/art-search-input/art-search-input.html
@@ -1,4 +1,4 @@
 <div class="ctl ctl-chromeless ctl-search">
     <a class="btn btn-chromeless"><i class="zmdi zmdi-search"></i><span class="btn-label"></span></a>
-    <input type="text" ng-model="t.query" ng-keyup="t.onKeyUp($event)" placeholder="Suchen">
+    <input type="text" ng-model="t.query" ng-keyup="t.onKeyUp($event)" placeholder="{{'Search' | translate}}">
 </div>
