Replaced ng-router with ui-router.

--- a/Journal/app/directives/art-document-history-viewer/art-document-history-viewer.html
+++ b/Journal/app/directives/art-document-history-viewer/art-document-history-viewer.html
@@ -1,5 +1,7 @@
 <div class="layout-root">
-    <canvas ng-init="t.initialize()" translate>
+    <canvas class="viewer-canvas" translate>
         HTML canvas is not supported by your browser.
     </canvas>
+
+    <art-document-history-viewer-toolbar style="position: absolute; bottom: 10px; left: 10px; min-width: 400px;"></art-document-history-viewer-toolbar>
 </div>
