Improved translation. Bugfix: Loading correct project when switching tabs. Bugfix: Added /setup to setup state URL so that the startup state is correctly loaded.

--- a/Journal/app/directives/art-document-history-viewer-toolbar/art-document-history-viewer-toolbar.html
+++ b/Journal/app/directives/art-document-history-viewer-toolbar/art-document-history-viewer-toolbar.html
@@ -1,20 +1,20 @@
-<div class="toolbar toolbar-dark toolbar-floating" style="margin-right: 5px;">
-    <div class="col">
-        <a class="btn" ng-click="t.skipPrev()"><i class="zmdi zmdi-skip-previous"></i></a>
-    </div>
-    <div class="col">
-        <a class="btn" ng-click="t.togglePlay()">
-            <span ng-switch="t.playing">
-                <i ng-switch-when="false" class="zmdi zmdi-play"></i>
-                <i ng-switch-when="true" class="zmdi zmdi-pause"></i>
-            </span>
-        </a>
-    </div>
-    <div class="col">
-        <a class="btn" ng-click="t.skipNext()"><i class="zmdi zmdi-skip-next"></i></a>
-    </div>
-    <div class="col expand">
-        <div class="layout-container">
+<div class="table-layout toolbar">
+    <div class="row">
+        <div class="col">
+            <a class="btn" ng-click="t.skipPrev()"><i class="zmdi zmdi-skip-previous"></i></a>
+        </div>
+        <div class="col">
+            <a class="btn" ng-click="t.togglePlay()">
+                <span ng-switch="t.playing">
+                    <i ng-switch-when="false" class="zmdi zmdi-play"></i>
+                    <i ng-switch-when="true" class="zmdi zmdi-pause"></i>
+                </span>
+            </a>
+        </div>
+        <div class="col">
+            <a class="btn" ng-click="t.skipNext()"><i class="zmdi zmdi-skip-next"></i></a>
+        </div>
+        <div class="col expand">
             <art-playback-slider></art-playback-slider>
         </div>
     </div>
