--- a/Journal/app/directives/art-playback-slider/art-playback-slider.html
+++ b/Journal/app/directives/art-playback-slider/art-playback-slider.html
@@ -1,5 +1,5 @@
 <!-- The padding enables the mouseleave event if the cursor leaves the window. -->
-<div style="padding-bottom: 1px; min-width: 600px;">
+<div style="padding-bottom: 1px;">
     <div class="timeline">
         <div class="timeline-control">
             <div class="position"><label></label></div>
