Editing stats are now working again.

--- a/Journal/app/directives/art-editing-stats/art-editing-stats.html
+++ b/Journal/app/directives/art-editing-stats/art-editing-stats.html
@@ -1,5 +1,5 @@
 <h5 translate>Editing</h5>
-<table>
+<table style="min-width: 300px;">
     <tr>
         <td>
             <label translate>Confidence</label>
@@ -30,7 +30,7 @@
     </tr>
 </table>
 <h5 style="margin-top: 1em;" translate>Composition</h5>
-<table>
+<table style="min-width: 300px;">
     <tr>
         <td>
             <label translate>Layers</label>
